--- a/fms_fsdp/mup/notebooks/scaling.ipynb
+++ b/fms_fsdp/mup/notebooks/scaling.ipynb
@@ -1925,14 +1925,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "325fc370-f870-4e29-af18-4a3cd052f7df",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50b8121f1db74f55958d1d733eda5771",
+       "model_id": "26031f6a8da246cda090668f09a2ac17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1942,6 +1942,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outputs.shape=torch.Size([8, 4096, 128256]), in_features=512\n",
+      "outputs.shape=torch.Size([8, 4096, 128256]), in_features=1024\n",
+      "outputs.shape=torch.Size([8, 4096, 128256]), in_features=1536\n",
+      "outputs.shape=torch.Size([8, 4096, 128256]), in_features=2048\n",
+      "outputs.shape=torch.Size([8, 4096, 128256]), in_features=2560\n",
+      "outputs.shape=torch.Size([8, 4096, 128256]), in_features=3072\n",
+      "outputs.shape=torch.Size([8, 4096, 128256]), in_features=3584\n",
+      "outputs.shape=torch.Size([8, 4096, 128256]), in_features=4096\n"
+     ]
     },
     {
      "data": {
@@ -1964,122 +1978,132 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>width</th>\n",
-       "      <th>step</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>l1_mean</th>\n",
+       "      <th>in_features</th>\n",
        "      <th>l2_mean</th>\n",
+       "      <th>l1_mean</th>\n",
+       "      <th>l2_sum</th>\n",
+       "      <th>l1_sum</th>\n",
        "      <th>std</th>\n",
        "      <th>var</th>\n",
+       "      <th>mean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>lm_head</td>\n",
        "      <td>512</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000271</td>\n",
-       "      <td>0.796875</td>\n",
-       "      <td>0.999988</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.001953</td>\n",
+       "      <td>0.035156</td>\n",
+       "      <td>8192000.0</td>\n",
+       "      <td>147849216.0</td>\n",
+       "      <td>0.044189</td>\n",
+       "      <td>0.001953</td>\n",
+       "      <td>-3.096648e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>lm_head</td>\n",
        "      <td>1024</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000032</td>\n",
-       "      <td>0.796875</td>\n",
-       "      <td>0.999989</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.000977</td>\n",
+       "      <td>0.024902</td>\n",
+       "      <td>4112384.0</td>\n",
+       "      <td>104857600.0</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.000977</td>\n",
+       "      <td>5.774200e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>lm_head</td>\n",
        "      <td>1536</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.000109</td>\n",
-       "      <td>0.796875</td>\n",
-       "      <td>0.999988</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.000652</td>\n",
+       "      <td>0.020386</td>\n",
+       "      <td>2736128.0</td>\n",
+       "      <td>85458944.0</td>\n",
+       "      <td>0.025513</td>\n",
+       "      <td>0.000652</td>\n",
+       "      <td>-2.281740e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>lm_head</td>\n",
        "      <td>2048</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000176</td>\n",
-       "      <td>0.796875</td>\n",
-       "      <td>0.999988</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.000488</td>\n",
+       "      <td>0.017578</td>\n",
+       "      <td>2056192.0</td>\n",
+       "      <td>73924608.0</td>\n",
+       "      <td>0.022095</td>\n",
+       "      <td>0.000488</td>\n",
+       "      <td>-2.750312e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>lm_head</td>\n",
        "      <td>2560</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000094</td>\n",
-       "      <td>0.796875</td>\n",
-       "      <td>0.999988</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.000391</td>\n",
+       "      <td>0.015747</td>\n",
+       "      <td>1638400.0</td>\n",
+       "      <td>66322432.0</td>\n",
+       "      <td>0.019775</td>\n",
+       "      <td>0.000391</td>\n",
+       "      <td>8.149073e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>lm_head</td>\n",
        "      <td>3072</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.000026</td>\n",
-       "      <td>0.796875</td>\n",
-       "      <td>0.999988</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.000326</td>\n",
+       "      <td>0.014404</td>\n",
+       "      <td>1368064.0</td>\n",
+       "      <td>60555264.0</td>\n",
+       "      <td>0.018066</td>\n",
+       "      <td>0.000326</td>\n",
+       "      <td>-1.513399e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>lm_head</td>\n",
        "      <td>3584</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000095</td>\n",
-       "      <td>0.796875</td>\n",
-       "      <td>0.999986</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.000278</td>\n",
+       "      <td>0.013306</td>\n",
+       "      <td>1171456.0</td>\n",
+       "      <td>56098816.0</td>\n",
+       "      <td>0.016724</td>\n",
+       "      <td>0.000278</td>\n",
+       "      <td>-6.519258e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>lm_head</td>\n",
        "      <td>4096</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000072</td>\n",
-       "      <td>0.796875</td>\n",
-       "      <td>0.999988</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.000244</td>\n",
+       "      <td>0.012451</td>\n",
+       "      <td>1028096.0</td>\n",
+       "      <td>52428800.0</td>\n",
+       "      <td>0.015625</td>\n",
+       "      <td>0.000244</td>\n",
+       "      <td>-2.626330e-07</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name  width  step      mean   l1_mean   l2_mean  std  var\n",
-       "0  lm_head    512     0  0.000271  0.796875  0.999988  1.0  1.0\n",
-       "1  lm_head   1024     0  0.000032  0.796875  0.999989  1.0  1.0\n",
-       "2  lm_head   1536     0 -0.000109  0.796875  0.999988  1.0  1.0\n",
-       "3  lm_head   2048     0  0.000176  0.796875  0.999988  1.0  1.0\n",
-       "4  lm_head   2560     0  0.000094  0.796875  0.999988  1.0  1.0\n",
-       "5  lm_head   3072     0 -0.000026  0.796875  0.999988  1.0  1.0\n",
-       "6  lm_head   3584     0  0.000095  0.796875  0.999986  1.0  1.0\n",
-       "7  lm_head   4096     0  0.000072  0.796875  0.999988  1.0  1.0"
+       "   in_features   l2_mean   l1_mean     l2_sum       l1_sum       std  \\\n",
+       "0          512  0.001953  0.035156  8192000.0  147849216.0  0.044189   \n",
+       "1         1024  0.000977  0.024902  4112384.0  104857600.0  0.031250   \n",
+       "2         1536  0.000652  0.020386  2736128.0   85458944.0  0.025513   \n",
+       "3         2048  0.000488  0.017578  2056192.0   73924608.0  0.022095   \n",
+       "4         2560  0.000391  0.015747  1638400.0   66322432.0  0.019775   \n",
+       "5         3072  0.000326  0.014404  1368064.0   60555264.0  0.018066   \n",
+       "6         3584  0.000278  0.013306  1171456.0   56098816.0  0.016724   \n",
+       "7         4096  0.000244  0.012451  1028096.0   52428800.0  0.015625   \n",
+       "\n",
+       "        var          mean  \n",
+       "0  0.001953 -3.096648e-08  \n",
+       "1  0.000977  5.774200e-08  \n",
+       "2  0.000652 -2.281740e-07  \n",
+       "3  0.000488 -2.750312e-09  \n",
+       "4  0.000391  8.149073e-08  \n",
+       "5  0.000326 -1.513399e-08  \n",
+       "6  0.000278 -6.519258e-07  \n",
+       "7  0.000244 -2.626330e-07  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,6 +2151,7 @@
     "    with torch.no_grad():\n",
     "        with torch.autocast(device_type=\"cuda\", dtype=torch.bfloat16, enabled=model_amp):\n",
     "            outputs = model(inputs).logits\n",
+    "        print(f\"{outputs.shape=}, {in_features=}\")\n",
     "    model_results_dict = {\"in_features\": in_features,\n",
     "                    \"l2_mean\": outputs.pow(2).mean().item(),\n",
     "                    \"l1_mean\": outputs.abs().mean().item(),\n",
@@ -2137,11 +2162,8 @@
     "                    \"mean\": outputs.mean().item(),\n",
     "                   }\n",
     "    model_results.append(model_results_dict)\n",
-    "\n",
     "model_df = pd.DataFrame(model_results)\n",
-    "model_df\n",
-    "lm_head_df = pd.DataFrame(lm_head_input_results)\n",
-    "lm_head_df"
+    "model_df\n"
    ]
   },
   {
@@ -2177,6 +2199,158 @@
     "model_plot.set(yscale=\"log\")\n",
     "\n",
     "plt.suptitle(\"Model scaling\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f9259650-3197-4453-a395-8d9b7c06c54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>width</th>\n",
+       "      <th>step</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>l1_mean</th>\n",
+       "      <th>l2_mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>var</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>lm_head</td>\n",
+       "      <td>512</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000298</td>\n",
+       "      <td>0.796875</td>\n",
+       "      <td>0.999988</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>lm_head</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000587</td>\n",
+       "      <td>0.796875</td>\n",
+       "      <td>0.999989</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lm_head</td>\n",
+       "      <td>1536</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000022</td>\n",
+       "      <td>0.796875</td>\n",
+       "      <td>0.999988</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>lm_head</td>\n",
+       "      <td>2048</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000190</td>\n",
+       "      <td>0.796875</td>\n",
+       "      <td>0.999988</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>lm_head</td>\n",
+       "      <td>2560</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000103</td>\n",
+       "      <td>0.796875</td>\n",
+       "      <td>0.999988</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>lm_head</td>\n",
+       "      <td>3072</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000050</td>\n",
+       "      <td>0.796875</td>\n",
+       "      <td>0.999989</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>lm_head</td>\n",
+       "      <td>3584</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>0.796875</td>\n",
+       "      <td>0.999988</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>lm_head</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>0.796875</td>\n",
+       "      <td>0.999988</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name  width  step      mean   l1_mean   l2_mean  std  var\n",
+       "0  lm_head    512     0 -0.000298  0.796875  0.999988  1.0  1.0\n",
+       "1  lm_head   1024     0  0.000587  0.796875  0.999989  1.0  1.0\n",
+       "2  lm_head   1536     0  0.000022  0.796875  0.999988  1.0  1.0\n",
+       "3  lm_head   2048     0 -0.000190  0.796875  0.999988  1.0  1.0\n",
+       "4  lm_head   2560     0  0.000103  0.796875  0.999988  1.0  1.0\n",
+       "5  lm_head   3072     0 -0.000050  0.796875  0.999989  1.0  1.0\n",
+       "6  lm_head   3584     0  0.000050  0.796875  0.999988  1.0  1.0\n",
+       "7  lm_head   4096     0  0.000072  0.796875  0.999988  1.0  1.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lm_head_df = pd.DataFrame(lm_head_input_results)\n",
+    "lm_head_df\n"
    ]
   },
   {
